@@ -41,9 +41,13 @@ unit_system = metricwx
 [Texts]
 
     WeeWX Skymap almanac extension example = Beispiel für die WeeWX-Erweiterung weewx-skymap-almanac-extension
-    Sky map = Himmelskarte
+    Sky map = Sternkarte
     Analemma = Analemma
     'See <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension at GitHub</a> for more details.' = Für mehr Details siehe <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension auf  GitHub</a>.
+    Altitude scale = Höhenskala
+    Right ascension scale = Rekataszensionsskala
+    Ecliptic = Ekliptik
+    Constellation lines = Sternbildlinien
 
     [[Geographical]]
         Altitude = Höhe ü. NN    # As in height above sea level
