@@ -45,6 +45,10 @@ unit_system = us
     Sky map = Sky map
     Analemma = Analemma
     'See <a href="https://github.com/roe-dl/weewx-skymap-almanac" target="_blank">weewx-skymap-almananac extension at GitHub</a> for more details.' = See <a href="https://github.com/roe-dl/weewx-skymap-almanac">weewx-skymap-almananac extension at GitHub</a> for more details.
+    Altitude scale = Altitude scale
+    Right ascension scale = Right ascension scale
+    Ecliptic = Ecliptic
+    Constellation lines = Constellation lines
 
     [[Geographical]]
         Altitude = Altitude    # As in height above sea level
